--- a/GCDWebUploader/GCDWebUploader.bundle/Contents/Resources/index.html
+++ b/GCDWebUploader/GCDWebUploader.bundle/Contents/Resources/index.html
@@ -61,7 +61,7 @@
       <div class="steps-container" id="steps-container" style="display:block">
         <div class="steps">
           <div class="step">
-            <img src="/Import_kindle.png" />
+<!--            <img src="/Import_kindle.png" />-->
             <p class="step-title">第一步</p>
             <p class="step-instruction">将您的Kindle链接电脑</p>
           </div>
@@ -69,17 +69,17 @@
             <img src="/next.png" />
           </div>
           <div class="step">
-            <img src="/ft_files.png" />
+<!--            <img src="/ft_files.png" />-->
             <p class="step-title">第二步</p>
-            <p class="step-instruction">打开Kindle磁盘，打开 documents 文件夹</p>
+            <p class="step-instruction">打开【Kindle】磁盘，打开【documents】文件夹</p>
           </div>
           <div class="next">
             <img src="/next.png" />
           </div>
           <div class="step">
-            <img src="/complete.png" />
+<!--            <img src="/complete.png" />-->
             <p class="step-title">第三步</p>
-            <p class="step-instruction">找到 My Clippings.txt 文件并上传</p>
+            <p class="step-instruction">找到【My Clippings.txt】文件并上传</p>
           </div>
         </div>
 
