--- a/GCDWebUploader/GCDWebUploader.bundle/Contents/Resources/index.html
+++ b/GCDWebUploader/GCDWebUploader.bundle/Contents/Resources/index.html
@@ -69,9 +69,9 @@
           <span class="glyphicon glyphicon-upload"></span> Upload Files&hellip;
           <input id="fileupload" type="file" name="files[]" multiple>
         </button>
-        <button type="button" class="btn btn-success" id="create-folder">
-          <span class="glyphicon glyphicon-folder-close"></span> Create Folder&hellip;
-        </button>
+<!--        <button type="button" class="btn btn-success" id="create-folder">-->
+<!--          <span class="glyphicon glyphicon-folder-close"></span> Create Folder&hellip;-->
+<!--        </button>-->
         <button type="button" class="btn btn-default" id="reload">
           <span class="glyphicon glyphicon-refresh"></span> Refresh
         </button>
@@ -156,16 +156,7 @@
             <p>{%=formatFileSize(o.size)%}</p>
           {% } %}
         </td>
-        <td class="column-move">
-          <button type="button" class="btn btn-default btn-xs button-move">
-            <span class="glyphicon glyphicon glyphicon-share-alt"></span>
-          </button>
-        </td>
-        <td class="column-delete">
-          <button type="button" class="btn btn-danger btn-xs button-delete">
-            <span class="glyphicon glyphicon-trash"></span>
-          </button>
-        </td>
+
       </tr>
     </script>
     
